--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,1 +1,17 @@
+spring:
+  datasource:
+    url: jdbc:h2:tcp://localhost/~/data/jpashop
+    username: sa
+    driver-class-name: org.h2.Driver
 
+  jpa:
+    hibernate:
+      ddl-auto: create
+    properties:
+      hibernate:
+#        show_sql: true  # -> system.out?? ??
+        format_sql: true
+
+logging:
+  level:
+    org.hibernate.sql: debug  # ??? ??
