--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,7 +9,7 @@ spring:
       ddl-auto: create
     properties:
       hibernate:
-#        show_sql: true  # -> system.out?? ??
+#        show_sql: true  # -> system.out 으로 출력됨
         format_sql: true
 
 logging:
